--- a/public/index.html
+++ b/public/index.html
@@ -1,123 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lost & Found System</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Welcome - Lost & Found</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+    body {
+      background: linear-gradient(to right, #007bff, #6c63ff);
+      color: white;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+    }
+    .card {
+      background-color: rgba(255, 255, 255, 0.95);
+      color: #333;
+    }
+    .btn-primary {
+      background-color: #007bff;
+      border: none;
+    }
+  </style>
 </head>
-<body class="bg-light">
-  <div class="container mt-5">
-    <h2 class="mb-4 text-center">Campus Lost & Found</h2>
-
-    <!-- Add Item Form -->
-    <div class="card mb-4">
-      <div class="card-header">Report Found Item</div>
-      <div class="card-body">
-        <form id="itemForm">
-          <div class="mb-3">
-            <label for="itemName" class="form-label">Item Name</label>
-            <input type="text" class="form-control" id="itemName" required>
+<body>
+  <div class="container text-center">
+    <div class="row justify-content-center">
+      <div class="col-md-8 col-lg-6">
+        <div class="card p-4 shadow-lg rounded">
+          <h1 class="mb-4">Campus Lost & Found</h1>
+          <p class="lead">Easily report, find, and claim lost items on campus.</p>
+          <div class="d-grid gap-2 mt-4">
+            <a href="login.html" class="btn btn-primary btn-lg">Login</a>
+            <a href="register.html" class="btn btn-outline-primary btn-lg">Register</a>
+            <a href="lostItems.html" class="btn btn-link">View Lost Items</a>
           </div>
-          <div class="mb-3">
-            <label for="description" class="form-label">Description</label>
-            <textarea class="form-control" id="description"></textarea>
-          </div>
-          <div class="mb-3">
-            <label for="locationFound" class="form-label">Location Found</label>
-            <input type="text" class="form-control" id="locationFound" required>
-          </div>
-          <div class="mb-3">
-            <label for="dateFound" class="form-label">Date Found</label>
-            <input type="date" class="form-control" id="dateFound" required>
-          </div>
-          <button type="submit" class="btn btn-primary">Add Item</button>
-        </form>
-      </div>
-    </div>
-
-    <!-- Display Items -->
-    <div class="card">
-      <div class="card-header">Unclaimed Items</div>
-      <div class="card-body">
-        <div id="itemsList" class="table-responsive">
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>Item</th>
-                <th>Description</th>
-                <th>Location</th>
-                <th>Date</th>
-                <th>Claimed</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody id="itemsTable"></tbody>
-          </table>
         </div>
       </div>
     </div>
   </div>
-
-  <script>
-    const API_URL = 'http://localhost:3000/api/items';
-
-    async function fetchItems() {
-      const res = await fetch(API_URL);
-      const items = await res.json();
-
-      const table = document.getElementById('itemsTable');
-      table.innerHTML = '';
-      items.forEach(item => {
-        table.innerHTML += `
-          <tr>
-            <td>${item.itemName}</td>
-            <td>${item.description || '-'}</td>
-            <td>${item.locationFound}</td>
-            <td>${new Date(item.dateFound).toLocaleDateString()}</td>
-            <td>${item.claimed ? 'Yes' : 'No'}</td>
-            <td>
-              <button class="btn btn-sm btn-success" onclick="markAsClaimed('${item._id}')">Mark Claimed</button>
-              <button class="btn btn-sm btn-danger" onclick="deleteItem('${item._id}')">Delete</button>
-            </td>
-          </tr>
-        `;
-      });
-    }
-
-    async function markAsClaimed(id) {
-      await fetch(`${API_URL}/${id}`, {
-        method: 'PUT',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ claimed: true })
-      });
-      fetchItems();
-    }
-
-    async function deleteItem(id) {
-      await fetch(`${API_URL}/${id}`, { method: 'DELETE' });
-      fetchItems();
-    }
-
-    document.getElementById('itemForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const item = {
-        itemName: document.getElementById('itemName').value,
-        description: document.getElementById('description').value,
-        locationFound: document.getElementById('locationFound').value,
-        dateFound: document.getElementById('dateFound').value
-      };
-      await fetch(API_URL, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(item)
-      });
-      e.target.reset();
-      fetchItems();
-    });
-
-    // Load items initially
-    fetchItems();
-  </script>
 </body>
 </html>
