--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dashboard - Lost & Found</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
@@ -23,6 +23,14 @@
     .sidebar a:hover {
       background-color: #495057;
     }
+    .dark-mode {
+      background-color: #121212;
+      color: #eee;
+    }
+    .dark-mode .card, .dark-mode .table {
+      background-color: #1e1e1e;
+      color: #ccc;
+    }
   </style>
 </head>
 <body>
@@ -31,18 +39,29 @@
     <div class="sidebar p-3">
       <h4>Lost & Found</h4>
       <hr />
-      <div id="userGreeting" class="mb-4"></div>
+      <div id="userGreeting" class="mb-3"></div>
       <a href="#" onclick="showSection('viewItems')">📋 View Items</a>
       <a href="#" onclick="showSection('addItem')">➕ Add Item</a>
+      <a href="#" onclick="showSection('profileSection')">👤 Profile</a>
+      <a href="#" onclick="toggleDarkMode()">🌓 Toggle Dark Mode</a>
       <a href="#" onclick="logout()">🚪 Logout</a>
     </div>
 
     <!-- Main Content -->
-    <div class="flex-grow-1 p-4">
-      <!-- View Items Section -->
+    <div class="flex-grow-1 p-4" id="mainContent">
+      <!-- Profile Section -->
+      <div id="profileSection" class="section" style="display: none;">
+        <h3>User Profile</h3>
+        <p><strong>Name:</strong> <span id="profileName"></span></p>
+        <p><strong>Email:</strong> <span id="profileEmail"></span></p>
+        <p><strong>Role:</strong> <span id="profileRole"></span></p>
+      </div>
+
+      <!-- Search Field -->
       <div id="viewItems" class="section">
         <h3>Unclaimed Items</h3>
-        <div class="table-responsive mt-3">
+        <input type="text" class="form-control my-3" placeholder="Search by name or location..." oninput="searchItems(this.value)" />
+        <div class="table-responsive">
           <table class="table table-bordered">
             <thead class="table-dark">
               <tr>
@@ -90,16 +109,20 @@
     const token = localStorage.getItem('token');
     const user = JSON.parse(localStorage.getItem('user'));
 
-    if (!token) {
-      window.location.href = 'login.html';
-    }
+    if (!token) window.location.href = 'login.html';
 
     document.getElementById('userGreeting').innerText = `👤 Welcome, ${user.name}`;
+    document.getElementById('profileName').innerText = user.name;
+    document.getElementById('profileEmail').innerText = user.email;
+    document.getElementById('profileRole').innerText = user.role || 'user';
 
     function logout() {
-      localStorage.removeItem('token');
-      localStorage.removeItem('user');
+      localStorage.clear();
       window.location.href = 'index.html';
+    }
+
+    function toggleDarkMode() {
+      document.body.classList.toggle('dark-mode');
     }
 
     function showSection(id) {
@@ -109,15 +132,16 @@
 
     async function fetchItems() {
       const res = await fetch(API_URL, {
-        headers: {
-          Authorization: `Bearer ${token}`
-        }
+        headers: { Authorization: `Bearer ${token}` }
       });
-      const items = await res.json();
+      items = await res.json();
+      renderItems(items);
+    }
 
+    function renderItems(data) {
       const table = document.getElementById('itemsTable');
       table.innerHTML = '';
-      items.forEach(item => {
+      data.forEach(item => {
         table.innerHTML += `
           <tr>
             <td>${item.itemName}</td>
@@ -127,7 +151,7 @@
             <td>${item.claimed ? 'Yes' : 'No'}</td>
             <td>
               <button class="btn btn-sm btn-success" onclick="markAsClaimed('${item._id}')">Claimed</button>
-              <button class="btn btn-sm btn-danger" onclick="deleteItem('${item._id}')">Delete</button>
+              ${user.role === 'security' ? `<button class="btn btn-sm btn-danger" onclick="deleteItem('${item._id}')">Delete</button>` : ''}
             </td>
           </tr>
         `;
@@ -149,9 +173,7 @@
     async function deleteItem(id) {
       await fetch(`${API_URL}/${id}`, {
         method: 'DELETE',
-        headers: {
-          Authorization: `Bearer ${token}`
-        }
+        headers: { Authorization: `Bearer ${token}` }
       });
       fetchItems();
     }
@@ -164,7 +186,6 @@
         locationFound: document.getElementById('locationFound').value,
         dateFound: document.getElementById('dateFound').value
       };
-
       await fetch(API_URL, {
         method: 'POST',
         headers: {
@@ -173,13 +194,20 @@
         },
         body: JSON.stringify(item)
       });
-
       e.target.reset();
       showSection('viewItems');
       fetchItems();
     });
 
-    // Load items when dashboard loads
+    function searchItems(query) {
+      const filtered = items.filter(item =>
+        item.itemName.toLowerCase().includes(query.toLowerCase()) ||
+        item.locationFound.toLowerCase().includes(query.toLowerCase())
+      );
+      renderItems(filtered);
+    }
+
+    let items = [];
     fetchItems();
   </script>
 </body>
