--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -57,6 +57,23 @@
         <p><strong>Role:</strong> <span id="profileRole"></span></p>
       </div>
 
+      <!-- Filter Field -->
+        <div class="d-flex justify-content-between align-items-center mb-3">
+  <div class="w-50">
+    <input type="text" class="form-control" placeholder="Search by name or location..." oninput="searchItems(this.value)" id="searchBox" />
+  </div>
+
+  <div class="ms-2 w-25">
+    <label for="filterStatus" class="form-label visually-hidden">Filter by status</label>
+    <select id="filterStatus" class="form-select" onchange="searchItems(document.getElementById('searchBox').value)">
+      <option value="all">All</option>
+      <option value="claimed">Claimed</option>
+      <option value="unclaimed">Unclaimed</option>
+    </select>
+  </div>
+</div>
+
+
       <!-- Search Field -->
       <div id="viewItems" class="section">
         <h3>Unclaimed Items</h3>
@@ -104,88 +121,129 @@
     </div>
   </div>
 
-  <script>
-    const API_URL = 'http://localhost:3000/api/items';
-    const token = localStorage.getItem('token');
-    const user = JSON.parse(localStorage.getItem('user'));
+<script>
+  const API_URL = 'http://localhost:9500/api/items';
+  const token = localStorage.getItem('token');
+  const user = JSON.parse(localStorage.getItem('user'));
 
-    if (!token) window.location.href = 'login.html';
+  if (!token || !user) {
+    localStorage.clear();
+    window.location.href = 'login.html';
+  }
 
-    document.getElementById('userGreeting').innerText = `👤 Welcome, ${user.name}`;
-    document.getElementById('profileName').innerText = user.name;
-    document.getElementById('profileEmail').innerText = user.email;
-    document.getElementById('profileRole').innerText = user.role || 'user';
+  // Display user profile
+  document.getElementById('userGreeting').innerText = `👤 Welcome, ${user.name}`;
+  document.getElementById('profileName').innerText = user.name;
+  document.getElementById('profileEmail').innerText = user.email;
+  document.getElementById('profileRole').innerText = user.role || 'user';
 
-    function logout() {
-      localStorage.clear();
-      window.location.href = 'index.html';
-    }
+  function logout() {
+    localStorage.clear();
+    window.location.href = 'index.html';
+  }
 
-    function toggleDarkMode() {
-      document.body.classList.toggle('dark-mode');
-    }
+  function toggleDarkMode() {
+    document.body.classList.toggle('dark-mode');
+  }
 
-    function showSection(id) {
-      document.querySelectorAll('.section').forEach(section => section.style.display = 'none');
-      document.getElementById(id).style.display = 'block';
-    }
+  function showSection(id) {
+    document.querySelectorAll('.section').forEach(section => section.style.display = 'none');
+    document.getElementById(id).style.display = 'block';
+  }
 
-    async function fetchItems() {
+  let items = [];
+
+  // Fetch all items from backend
+  async function fetchItems() {
+    try {
       const res = await fetch(API_URL, {
         headers: { Authorization: `Bearer ${token}` }
       });
       items = await res.json();
       renderItems(items);
+    } catch (error) {
+      console.error('Failed to fetch items:', error);
+    }
+  }
+
+  // Display items in table
+  function renderItems(data) {
+    const table = document.getElementById('itemsTable');
+    table.innerHTML = '';
+
+    if (!Array.isArray(data) || data.length === 0) {
+      table.innerHTML = `<tr><td colspan="6" class="text-center">No items found.</td></tr>`;
+      return;
     }
 
-    function renderItems(data) {
-      const table = document.getElementById('itemsTable');
-      table.innerHTML = '';
-      data.forEach(item => {
-        table.innerHTML += `
-          <tr>
-            <td>${item.itemName}</td>
-            <td>${item.description || '-'}</td>
-            <td>${item.locationFound}</td>
-            <td>${new Date(item.dateFound).toLocaleDateString()}</td>
-            <td>${item.claimed ? 'Yes' : 'No'}</td>
-            <td>
-              <button class="btn btn-sm btn-success" onclick="markAsClaimed('${item._id}')">Claimed</button>
-              ${user.role === 'security' ? `<button class="btn btn-sm btn-danger" onclick="deleteItem('${item._id}')">Delete</button>` : ''}
-            </td>
-          </tr>
-        `;
-      });
-    }
+    data.forEach(item => {
+      const claimedByInfo = item.claimedBy
+        ? `<br><small>${item.claimedBy.name || 'Unknown'}<br>${item.claimedBy.email || ''}</small>`
+        : '';
 
-    async function markAsClaimed(id) {
+      table.innerHTML += `
+        <tr>
+          <td>${item.itemName}</td>
+          <td>${item.description || '-'}</td>
+          <td>${item.locationFound}</td>
+          <td>${new Date(item.dateFound).toLocaleDateString()}</td>
+          <td>${item.claimed ? 'Yes' + claimedByInfo : 'No'}</td>
+          <td>
+            ${!item.claimed ? `
+              <button class="btn btn-sm btn-success" onclick="markAsClaimed('${item._id}')">Mark Claimed</button>
+            ` : ''}
+            ${user.role === 'security' ? `
+              <button class="btn btn-sm btn-danger" onclick="deleteItem('${item._id}')">Delete</button>
+            ` : ''}
+          </td>
+        </tr>
+      `;
+    });
+  }
+
+  // Mark an item as claimed
+  async function markAsClaimed(id) {
+    try {
       await fetch(`${API_URL}/${id}`, {
         method: 'PUT',
         headers: {
           'Content-Type': 'application/json',
           Authorization: `Bearer ${token}`
         },
-        body: JSON.stringify({ claimed: true })
+        body: JSON.stringify({
+          claimed: true,
+          claimedBy: user._id
+        })
       });
-      fetchItems();
+      fetchItems(); // Reload items after update
+    } catch (err) {
+      console.error('Failed to mark as claimed:', err);
     }
+  }
 
-    async function deleteItem(id) {
+  // Delete item (for security role only)
+  async function deleteItem(id) {
+    try {
       await fetch(`${API_URL}/${id}`, {
         method: 'DELETE',
         headers: { Authorization: `Bearer ${token}` }
       });
       fetchItems();
+    } catch (err) {
+      console.error('Delete failed:', err);
     }
+  }
 
-    document.getElementById('itemForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const item = {
-        itemName: document.getElementById('itemName').value,
-        description: document.getElementById('description').value,
-        locationFound: document.getElementById('locationFound').value,
-        dateFound: document.getElementById('dateFound').value
-      };
+  // Add new found item
+  document.getElementById('itemForm')?.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const item = {
+      itemName: document.getElementById('itemName').value,
+      description: document.getElementById('description').value,
+      locationFound: document.getElementById('locationFound').value,
+      dateFound: document.getElementById('dateFound').value
+    };
+    try {
       await fetch(API_URL, {
         method: 'POST',
         headers: {
@@ -197,18 +255,33 @@
       e.target.reset();
       showSection('viewItems');
       fetchItems();
+    } catch (err) {
+      console.error('Failed to add item:', err);
+    }
+  });
+
+  // Filter & search items
+  function searchItems(query) {
+    const filter = document.getElementById('filterStatus')?.value || 'all';
+
+    const filtered = items.filter(item => {
+      const matchQuery = item.itemName.toLowerCase().includes(query.toLowerCase()) ||
+                         item.locationFound.toLowerCase().includes(query.toLowerCase());
+
+      const matchStatus =
+        filter === 'all' ||
+        (filter === 'claimed' && item.claimed) ||
+        (filter === 'unclaimed' && !item.claimed);
+
+      return matchQuery && matchStatus;
     });
 
-    function searchItems(query) {
-      const filtered = items.filter(item =>
-        item.itemName.toLowerCase().includes(query.toLowerCase()) ||
-        item.locationFound.toLowerCase().includes(query.toLowerCase())
-      );
-      renderItems(filtered);
-    }
+    renderItems(filtered);
+  }
 
-    let items = [];
-    fetchItems();
-  </script>
+  // Load on start
+  fetchItems();
+</script>
+
 </body>
 </html>
