--- a/public/register.html
+++ b/public/register.html
@@ -1,96 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Register - Lost & Found</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body class="bg-light">
-  <div class="container mt-5">
-    <h2>Register</h2>
+  <div class="container mt-5" style="max-width: 500px;">
+    <h2 class="mb-4">Register</h2>
+
     <form id="registerForm">
       <div class="mb-3">
-        <label for="name">Name</label>
+        <label for="name" class="form-label">Name</label>
         <input type="text" class="form-control" id="name" required>
+        <div class="invalid-feedback">Please enter your name.</div>
       </div>
+
       <div class="mb-3">
-        <label for="email">Email</label>
+        <label for="email" class="form-label">Email</label>
         <input type="email" class="form-control" id="email" required>
+        <div class="invalid-feedback">Enter a valid email.</div>
       </div>
+
       <div class="mb-3">
-        <label for="password">Password</label>
+        <label for="password" class="form-label">Password</label>
         <input type="password" class="form-control" id="password" required>
+        <div class="invalid-feedback">Password is required.</div>
       </div>
-      <button type="submit" class="btn btn-primary">Register</button>
-      <p class="mt-3">Already have an account? <a href="login.html">Login</a></p>
+
+      <div id="errorAlert" class="alert alert-danger d-none"></div>
+
+      <button type="submit" class="btn btn-primary w-100">Register</button>
+
+      <p class="mt-3 text-center">
+        Already have an account? <a href="login.html">Login</a>
+      </p>
     </form>
   </div>
 
+  <!-- reCAPTCHA v3 -->
+  <script src="https://www.google.com/recaptcha/api.js?render=6LeQMHMrAAAAAFDCe_ZK97nc_2iTBnPATKpXdv7K"></script>
+
   <script>
-    const API = 'http://localhost:9500/api/auth/register';
+    const registerForm = document.getElementById('registerForm');
+    const errorAlert = document.getElementById('errorAlert');
 
-    document.getElementById('registerForm').addEventListener('submit', async (e) => {
+    registerForm.addEventListener('submit', async function (e) {
       e.preventDefault();
-      const user = {
-        name: document.getElementById('name').value,
-        email: document.getElementById('email').value,
-        password: document.getElementById('password').value
-      };
 
-      const res = await fetch(API, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(user)
+      // Clear old error
+      errorAlert.classList.add('d-none');
+      errorAlert.innerText = '';
+
+      grecaptcha.ready(function () {
+        grecaptcha.execute('6LeQMHMrAAAAAFDCe_ZK97nc_2iTBnPATKpXdv7K', { action: 'register' }).then(async function (token) {
+          const name = document.getElementById('name').value.trim();
+          const email = document.getElementById('email').value.trim();
+          const password = document.getElementById('password').value.trim();
+
+          const data = { name, email, password, recaptchaToken: token };
+
+          try {
+            const res = await fetch('/api/auth/register', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify(data)
+            });
+
+            const result = await res.json();
+
+            if (res.ok) {
+              localStorage.setItem('token', result.token);
+              localStorage.setItem('user', JSON.stringify(result));
+              window.location.href = '/dashboard';
+            } else {
+              errorAlert.classList.remove('d-none');
+              errorAlert.innerText = result.error || 'Registration failed.';
+            }
+
+          } catch (err) {
+            errorAlert.classList.remove('d-none');
+            errorAlert.innerText = 'Something went wrong. Please try again.';
+          }
+        });
       });
-
-      const data = await res.json();
-      if (res.ok) {
-        localStorage.setItem('token', data.token);
-        localStorage.setItem('user', JSON.stringify(data));
-        window.location.href = 'index.html';
-      } else {
-        alert(data.message || 'Registration failed');
-      }
     });
   </script>
-  <form id="registerForm">
-  <!-- name, email, password fields... -->
-  <button type="submit">Register</button>
-</form>
-
-<!-- Google reCAPTCHA -->
-  <script src="https://www.google.com/recaptcha/api.js?render=6LeQMHMrAAAAAFDCe_ZK97nc_2iTBnPATKpXdv7K"></script>
-<script>
-  // const SITE_KEY = "6LeQMHMrAAAAAFDCe_ZK97nc_2iTBnPATKpXdv7K"; // Replace with your reCAPTCHA v3 site key
-  const registerForm = document.getElementById('registerForm');
-  registerForm.addEventListener('submit', function (e) {
-    e.preventDefault();
-    grecaptcha.ready(function () {
-      grecaptcha.execute('6LeQMHMrAAAAAFDCe_ZK97nc_2iTBnPATKpXdv7K', { action: 'register' }).then(function (token) {
-        // Add token to the form data
-        const data = {
-          name: document.getElementById('name').value,
-          email: document.getElementById('email').value,
-          password: document.getElementById('password').value,
-          recaptchaToken: token
-        };
-
-        fetch('/api/auth/register', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
-        })
-        .then(res => res.json())
-        .then(data => {
-          if (data.error) alert(data.error);
-          else window.location.href = '/dashboard';
-        })
-        .catch(() => alert('Registration failed.'));
-      });
-    });
-  });
-</script>
-
 </body>
 </html>
